Fixed Ui bugs, added polling

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -13,6 +13,7 @@
   --secondary: oklch(0.95 0.0058 264.53);
   --secondary-foreground: #030213;
   --muted: #ececf0;
+  --customMuted: oklch(59.915% 0.23865 28.575);
   --muted-foreground: #717182;
   --accent: #e9ebef;
   --accent-foreground: #030213;
@@ -56,6 +57,7 @@
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
+  --customMuted: oklch(48.774% 0.18844 27.966);
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
